Finally found and removed the performance bottleneck, so now performance is equal to jackson updated dependencies and surefire config for java 9+